Login fixes + update docs
